tests/should-fail/shadowing/cannot-shadow-builtin-type.j

function test takes nothing returns nothing
    local integer integer
endfunction
